2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: IMediaDemuxer::SetStreams: ref the streams. We
	  already unref them upon destruction.

2009-04-16  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (DownloaderComplete): Only invalidate/etc if any
	of our inlines' fonts have changed - if they all override the font
	family, then there's no need to redraw.

2009-04-16  Jackson Harper  <jackson@ximian.com>

	* dependencyobject.cpp: Unregister the old name when we set an
	objects name.

2009-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* openfile.cpp|h: Add a dialog requester to increase isolated
	storage quota. Add function to recursively compute the total size
	of a directory, which is used to check quota in IS.

2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: mono_gc_invoke_finalizers may cause the
	  current appdomain to change, so restore it afterwards. Fixes
	  a rare, random crash upon shutdown.

2009-04-15  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::DownloaderComplete): Instead of
	invalidating the TextBoxBase, we need to emit an event to let the
	TextBoxView know our font has changed.
	(TextBoxView::OnModelChanged): Reset state on the layout when the
	font changes (since it has no way of knowing that the font has
	changed otherwise).

	* textblock.cpp (Inline::UpdateFontDescription): Return true if
	the font has changed or false otherwise.
	(TextBlock::UpdateFontDescriptions): If any of the fonts changed,
	return true and reset the state on the TextLayout.

	* font.cpp (TextFontDescription::Set*): Return true if the font
	has changed or false otherwise.

	* layout.cpp (TextLayout::ResetState): New method to reset the
	state of a TextLayout. Normally the state only gets reset if a
	layout property chanegs, but sometimes it is necessary to notify
	the TextLayout engine of a state change in one of the
	TextLayoutAttributes.

2009-04-15  Jeffrey Stedfast  <fejj@novell.com>
